Fixes wrong align in menus.

--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -194,3 +194,7 @@ html, body {
     background-color: #efefef;
   }
 }
+
+#top-menu.fixed + .grid {
+  margin-top: 35px;
+}
